# mathics-omnibus

./: README.rst  pyproject.toml
docker/: Dockerfile-dev  Dockerfile-release  entrypoint.sh
script/: dmathicsscript  dmathicsserver
